# AsyncFlaskFastapiComparison

./: .gitignore  README.md  config.json  flask_celery.py  pyproject.toml
.github/workflows/: codeql.yml  python-lint.yml
flask_celery/: flask_celery.py  gunicorn_config.py
flask_celery/templates/: 500.html  add_meta.html  base.html  base.html~  index.html  select_categories.html  send_to_wordpress.html  transition.html  upload.html
templates/: 404.html  base.html  choose_thumbnail.html  index.html  login.html  select_categories.html  send_to_wordpress.html  task_list.html  transition.html
