[tool.poetry]
name = "flaskcelery"
version = "0.1.0"
description = "Update Website"
authors = ["Massoud Ahmed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
Flask = "^2.3.2"
requests-auth = "^7.0.0"
DateTime = "^5.1"
gunicorn = "^20.1.0"
unidecode = "^1.3.6"
flask-socketio = "^5.3.4"
gevent = "^22.10.2"
celery = "^5.2.7"
redis = "^4.5.5"
flower = "^1.2.0"
vulture = "^2.7"
pytest = "^7.3.1"
pillow = "^9.5.0"
python-ffmpeg = "^2.0.4"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
flask-wtf = "^1.1.1"
uvicorn = "^0.22.0"
flask-compress = "^1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
